--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <script src="app.module.ts"></script>
+<app-loading-screen></app-loading-screen>
 <router-outlet></router-outlet>
 
