--- a/src/app/frontend/language-selection/header/header.component.css
+++ b/src/app/frontend/language-selection/header/header.component.css
@@ -1,12 +1,8 @@
 header {
   margin-top: 64px;
   width: 100%;
-  height: 300px;
   margin-bottom: 20px; }
 
-@media (max-width: 720px) {
-  header {
-    margin-top: 92px; } }
 .header-text {
   padding-top: 20px;
   padding-left: 10%;
@@ -21,10 +17,18 @@ header {
   color: white; }
 
 .header-text > .bigSlogan {
-  font-size: 500%;
-  margin: 40px 0px 140px 0px; }
+  font-size: 5rem;
+  line-height: 4rem;
+  margin: 40px 0 140px 0; }
 
 .header-text > .hint {
   font-weight: 600; }
+
+@media (max-width: 720px) {
+  header {
+    margin-top: 55px; }
+
+  .header-text > .bigSlogan {
+    font-size: 3rem; } }
 
 /*# sourceMappingURL=header.component.css.map */
