--- a/src/app/frontend/language-selection/header/header.component.scss
+++ b/src/app/frontend/language-selection/header/header.component.scss
@@ -1,13 +1,8 @@
 header {
   margin-top: 64px;
   width: 100%;
-  height: 300px;
+  //height: 300px;
   margin-bottom: 20px;
-}
-@media(max-width: 720px) {
-  header {
-    margin-top: 92px;
-  }
 }
 
 .header-text {
@@ -26,10 +21,20 @@ header {
 }
 
 .header-text > .bigSlogan {
-  font-size: 500%;
-  margin: 40px 0px 140px 0px;
+  font-size: 5rem;
+  line-height: 4rem;
+  margin: 40px 0 140px 0;
 }
 
 .header-text > .hint {
   font-weight: 600;
+}
+
+@media(max-width: 720px) {
+  header {
+    margin-top: 55px;
+  }
+  .header-text > .bigSlogan {
+    font-size: 3rem;
+  }
 }
