--- a/src/app/frontend/language-selection/language-selection.component.css
+++ b/src/app/frontend/language-selection/language-selection.component.css
@@ -5,11 +5,21 @@ mat-toolbar {
   right: 0;
   z-index: 2; }
 
-.languages {
+.languages-container {
   width: 80%;
-  margin: auto; }
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
 
 .language {
-  background: gray; }
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px; }
+
+@media (max-width: 720px) {
+  .languages-container {
+    width: 100%;
+    margin: 0; } }
 
 /*# sourceMappingURL=language-selection.component.css.map */
