--- a/src/app/frontend/language-selection/language/language.component.html
+++ b/src/app/frontend/language-selection/language/language.component.html
@@ -1,3 +1,20 @@
-<p>
-  language works!
-</p>
+<mat-card class="language-card">
+  <mat-card-header>
+    <mat-card-title>{{language.name}}</mat-card-title>
+    <!--<mat-card-subtitle></mat-card-subtitle>-->
+  </mat-card-header>
+  <!--<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
+  <svg *ngIf="language.acronym;" mat-card-image class="language-acronym" viewBox="0 0 56 18">
+    <text x="28" y="15" text-anchor="middle" fill="white">{{language.acronym}}</text>
+  </svg>
+  <mat-card-content>
+    <p>
+      {{language.description}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button (click)="onClickLoad()" mat-stroked-button>Load</button>
+    <button (click)="onClickNew()" mat-raised-button color="primary">New</button>
+  </mat-card-actions>
+</mat-card>
+
