language implementation completed

--- a/src/app/frontend/modelling/elements-sidebar/element-entity/element-entity.component.scss
+++ b/src/app/frontend/modelling/elements-sidebar/element-entity/element-entity.component.scss
@@ -1,8 +1,8 @@
 .element {
-  width: 90%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .element > img {
