--- a/src/app/frontend/modelling/toolbar/toolbar.component.scss
+++ b/src/app/frontend/modelling/toolbar/toolbar.component.scss
@@ -8,5 +8,11 @@ mat-toolbar {
 .toolbar-icon {
   color: white;
   font-size: 150% !important;
-  margin-top: 10px;
+}
+
+.backToStart {
+  padding-right: 5px;
+  margin-right: 10px;
+  border-right: white;
+  border-right-style: solid;
 }
