--- a/src/app/frontend/modelling/elements-sidebar/element-entity/element-entity.component.css
+++ b/src/app/frontend/modelling/elements-sidebar/element-entity/element-entity.component.css
@@ -1,10 +1,10 @@
 .element {
-  width: 90%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px; }
+  margin-top: 20px; }
 
 .element > img {
   width: 100%; }
 
-/*# sourceMappingURL=element-entity.component-entity.cssity.css.map */
+/*# sourceMappingURL=element-entity.component.css.map */
