--- a/src/app/frontend/modelling/modelling.component.html
+++ b/src/app/frontend/modelling/modelling.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
     <app-toolbar></app-toolbar>
 
-    <mat-sidenav-container class="example-container">
+    <mat-sidenav-container class="main-container">
         <mat-sidenav class="elements" opened mode="side">
             <app-elements-sidebar></app-elements-sidebar>
         </mat-sidenav>
