--- a/src/app/frontend/modelling/elements-sidebar/element-relation-selection/element-relation-selection.component.css
+++ b/src/app/frontend/modelling/elements-sidebar/element-relation-selection/element-relation-selection.component.css
@@ -1,6 +1,25 @@
 .selection-container {
   position: fixed;
   top: 20px;
-  left: 20px; }
+  left: 201px;
+  width: 30vw; }
+
+.content-container {
+  margin-right: auto;
+  margin-right: auto; }
+
+.form-item {
+  padding: 10px;
+  transition: width 0.5s; }
+
+.errorMessage {
+  color: #AC260D;
+  background-color: #F2DEDC;
+  border: #EBCCCF solid 1px;
+  border-radius: 4px;
+  width: 90%;
+  padding: 13px;
+  margin-right: auto;
+  margin-top: 20px; }
 
 /*# sourceMappingURL=element-relation-selection.component.css.map */
