--- a/src/app/frontend/modelling/modelling.component.css
+++ b/src/app/frontend/modelling/modelling.component.css
@@ -1,4 +1,4 @@
-.example-container {
+.main-container {
   position: absolute;
   top: 60px;
   bottom: 0;
@@ -10,7 +10,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  width: 200px; }
+  width: 200px;
+  overflow: auto; }
 
 .elements {
   padding-right: 10px; }
