--- a/src/app/frontend/modelling/toolbar/toolbar.component.html
+++ b/src/app/frontend/modelling/toolbar/toolbar.component.html
@@ -2,6 +2,10 @@
   <a class="toolbar-icon backToStart" routerLink="/start" routerLinkActive="active" matTooltip="Back to the start"><mat-icon>keyboard_arrow_left</mat-icon></a>
   <div class="tools">
     <button mat-icon-button (click)="saveModel()" class="toolbar-icon" matTooltip="Save the model">
-      <mat-icon>save</mat-icon></button>
+      <mat-icon>save</mat-icon>
+    </button>
+    <button mat-icon-button (click)="exportModel()" class="toolbar-icon" matTooltip="Create an image of the model">
+      <mat-icon>add_photo_alternate</mat-icon>
+    </button>
   </div>
 </mat-toolbar>
