noLanguageSelected bugfix with return button not returning

--- a/src/app/frontend/no-language-selected/no-language-selected.component.html
+++ b/src/app/frontend/no-language-selected/no-language-selected.component.html
@@ -5,7 +5,7 @@
             <h1>You need to select a language before you can start with modelling!</h1>
             <p> You may want to return to the selection page</p>
         </div>
-        <button mat-raised-button color="warn"><a class="error-return" routerLink="/start" routerLinkActive="active">return</a></button>
+        <button mat-raised-button color="warn" routerLink="/start" routerLinkActive="active"><a class="error-return">return</a></button>
 
     </div>
 </div>
