adding comments, small error handling enhancements
removed obsolete files

--- a/src/app/frontend/no-language-selected/no-language-selected.component.html
+++ b/src/app/frontend/no-language-selected/no-language-selected.component.html
@@ -2,8 +2,8 @@
     <div class="error-container">
         <img src="assets/warning.svg" alt="warning">
         <div class="error-text">
-            <h1>You need to select a language before you can start with modelling!</h1>
-            <p> You may want to return to the selection page</p>
+            <h1>You don't selected a language or the process to load your model failed</h1>
+            <p> You may want to return to the selection page and try again</p>
         </div>
         <button mat-raised-button color="warn" routerLink="/start" routerLinkActive="active"><a class="error-return">return</a></button>
 
