--- a/src/app/frontend/modelling/modelling.component.html
+++ b/src/app/frontend/modelling/modelling.component.html
@@ -11,8 +11,9 @@
         <mat-sidenav-content>
             <app-modelling-area></app-modelling-area>
         </mat-sidenav-content>
-
     </mat-sidenav-container>
+
+    <app-chat-window></app-chat-window>
 </div>
 
 
