--- a/src/app/frontend/modelling/modelling.component.scss
+++ b/src/app/frontend/modelling/modelling.component.scss
@@ -34,3 +34,11 @@ app-settings-sidebar {
   width: 100%;
 }
 
+app-chat-window {
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  z-index: 42;
+  width: 25vw;
+}
+
